# occa_gpu_algorithm

./: CMakeLists.txt  README.md
Compact/: CMakeLists.txt
Compact/src/: main.cpp
Compact_inverse/: CMakeLists.txt
Compact_inverse/src/: main.cpp
GeneralTools/: CMakeLists.txt
GeneralTools/src/: GeneralTools.cpp  GeneralTools.h
Histogram/: CMakeLists.txt
Histogram/src/: main.cpp
Mprocess/: CMakeLists.txt
Mthreads/: CMakeLists.txt
Mthreads/src/: main.cpp
Mthreads_Serial/: CMakeLists.txt
Mthreads_Serial/src/: main.cpp
OCCAKernels/: BSort.occa  Compact.occa  Compact_inverse.occa  Histogram.occa  Reduce.occa  Scan.occa  Scan_serial.occa
Reduce_InnerProduct/: CMakeLists.txt
Reduce_InnerProduct/src/: main.cpp
Scan_add/: CMakeLists.txt
Scan_add/src/: main.cpp
SimpleKernel/: CMakeLists.txt
SimpleKernel/src/: main.cpp
Sort_Bitonic/: CMakeLists.txt
Sort_Bitonic/src/: main.cpp
cmake/Modules/: FindOCCA.cmake  LibFindMacros.cmake
